@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.9341 2005/02/27 13:31:03 taya Exp $
+$NetBSD: CHANGES,v 1.9342 2005/02/27 22:30:43 veego Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -1177,3 +1177,9 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated firefox to 1.0.1 [taya 2005-02-27]
 	Removed firefox-gtk2 [taya 2005-02-27]
 	Added firefox-gtk1-1.0.1 [taya 2005-02-27]
+	Updated compat13 to 1.3.3nb2 [veego 2005-02-27]
+	Updated compat14 to 1.4.3.1nb1 [veego 2005-02-27]
+	Updated compat14-crypto to 1.4.3.1nb1 [veego 2005-02-27]
+	Updated twin to 3.1.14nb2 [veego 2005-02-27]
+	Updated blackdown to jdk13-1nb5 [veego 2005-02-27]
+	Updated transcode to 0.6.12nb5 [veego 2005-02-27]
